Increase backwards compatability from 1.18-1.21.5